[project]
name = "project11"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muhammad Uzair", email = "uzairyasin83@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.102.0",
    "crewai-tools>=0.36.0",
]

[project.scripts]
project11 = "project11:main"
book = "project11.main:BookWriter"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
