[project]
name = "project11"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Muhammad Uzair", email = "uzairyasin83@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.102.0",
    "crewai-tools>=0.36.0",
    "fpdf>=1.7.2",
    "reportlab>=4.3.1",
    "streamlit>=1.42.2",
]

[project.scripts]
project11 = "project11:main"
outliner = "project11.agent1_main:outline_writer"
writer = "project11.agent2_main:writer"
End = "project11.main:last"



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
